changed 'div' tags in html to more accessible tags

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <!-- changed div to figure For Accessibility Reason (referred to as F.A.R from here on out) -->
+    <figure class="hero"></figure>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
