--- a/index.html
+++ b/index.html
@@ -29,29 +29,31 @@
     </header>
     <!-- changed div to figure For Accessibility Reason (referred to as F.A.R from here on out) -->
     <figure class="hero"></figure>
-    <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <!-- changed div to main F.A.R -->
+    <main class="content">
+        <!-- changed div to section F.A.R. Created class 'card' to consolidate SEO, ORM and SMM classes in the following three sections to one class for CSS efficiency. Added alt descriptions for every each section image  -->
+        <section id="search-engine-optimization" class="card">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook with SEO cloud" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </section>
+        <section id="online-reputation-management" class="card">
+            <img src="./assets/images/online-reputation-management.jpg" alt="A laptop that reads 'REPUTATION'."class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing" class="card">
+            <img src="./assets/images/social-media-marketing.jpg" alt="A table full of social media icons." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </section>
+    </main>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
